# ArgyllUX

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LEGAL.md  README.md  THIRD_PARTY_NOTICES.md  run
.codex/environments/: environment.toml
apple/ArgyllUX.xcodeproj/: project.pbxproj
apple/ArgyllUXTests/: AppModelShellTests.swift  AppModelTests.swift  CliTranscriptModelTests.swift  DiagnosticsModelTests.swift  NewProfileWorkflowModelTests.swift  ProfileLibraryModelTests.swift  SettingsCatalogModelTests.swift
apple/ArgyllUXTests/Support/: AppModelTestSupport.swift
docs/plans/: initial-scaffolding-plan.md  new-profile-contained-refinement-plan.md  new-profile-live-surface-alignment-plan.md  new-profile-source-of-truth-note.md  new-profile-source-of-truth-reconciliation-plan.md
docs/projectprd/: 00-product-overview.md  01-information-architecture.md  02-workflows-and-state-machines.md  03-screen-specs.md  04-decision-engine.md  05-advanced-inspection.md  06-ui-copy-and-controls.md
docs/superpowers/: code-review-checklist.md
docs/superpowers/plans/: 2026-04-26-diagnostics-system.md
docs/superpowers/specs/: 2026-04-26-diagnostics-system-design.md
docs/superpowers/templates/: implementation-spec-template.md
legal/: release-copy.md
rust/engine/: Cargo.toml  uniffi.toml
rust/engine/src/: db.rs  diagnostics.rs  lib.rs  logging.rs  model.rs  runner.rs  support.rs  toolchain.rs
script/: build_and_run.sh
scripts/: build-swift-bridge.sh  check-diagnostics-section.sh
tmp/pdfs/: lasal-photo-matte.txt  william-turner-310.txt
(+41 files in other folders)
