[workspace]
members = [
  "rust/engine",
  "rust/tools/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
uniffi = "0.30.0"
