[package]
name = "argyllux_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uniffi.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
